<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" 
        android:hint="@string/password"/>

    <CheckBox
        android:id="@+id/checkBoxAutoLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AutoLogin" />

    <CheckBox
        android:id="@+id/checkBoxAutoFill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AutoFill" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login" />

</LinearLayout>