<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:columnCount="4" >

    <ImageView
        android:id="@+id/imageViewProfilePicture"
        android:layout_width="96dp"
        android:layout_height="102dp"
        android:layout_column="0"
        android:layout_gravity="start|top"
        android:layout_row="0"
        android:contentDescription="@string/profilePicture"
        android:src="@drawable/empty_profile_picture" />

    <TextView
        android:id="@+id/textViewUsername"
        android:layout_column="0"
        android:layout_gravity="end|center_vertical"
        android:layout_row="0"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editTextNewUsername"
        android:layout_column="0"
        android:layout_gravity="start|center_vertical"
        android:layout_row="1"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/changeUsername" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_column="0"
        android:layout_gravity="start|top"
        android:layout_row="4"
        android:ems="10"
        android:inputType="date"
        android:hint="@string/date" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editTextSmallMessage"
        android:layout_column="0"
        android:layout_gravity="start|top"
        android:layout_row="5"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/smallMessage" />

    <Button
        android:id="@+id/buttonSaveChanges"
        android:layout_width="match_parent"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="7"
        android:text="@string/saveChanges" />

    <EditText
        android:id="@+id/editTextConfirmPassword"
        android:layout_column="0"
        android:layout_gravity="start|center_vertical"
        android:layout_row="3"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/confrimChange" />

    <Button
        android:id="@+id/buttonChangeUsername"
        style="?android:attr/buttonStyleSmall"
        android:layout_column="0"
        android:layout_gravity="end|top"
        android:layout_row="3"
        android:text="@string/changePassword" />

</GridLayout>