<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/editTextUsername"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/username" >
    </EditText>

    <TextView
        android:id="@+id/textViewUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:gravity="center" />

    <EditText
        android:id="@+id/editTextPassowrdFirst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPassword"
        android:hint="@string/password" />

    <TextView
        android:id="@+id/textViewPasswordOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/passwordInfo"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/editTextPasswordSecond"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPassword"
        android:hint="@string/repeatPassword" />

    <TextView
        android:id="@+id/textViewPasswordTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <CheckBox
            android:id="@+id/checkBoxASGB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textViewASGB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AcceptASGB"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonCreateAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/CreateAccount"
        android:layout_gravity="center" />

</LinearLayout>
