<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

   <EditText
        android:id="@+id/editTextEventName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" 
        android:hint="@string/eventName">
    </EditText>

    <RatingBar
        android:id="@+id/ratingBarEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/buttonTakePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/takePhoto" />

    <Button
        android:id="@+id/buttonAddEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addEvent" />

</LinearLayout>
