<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/editTextOldPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/oldPassword" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editTextNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/newPassword" />

    <TextView
        android:id="@+id/textViewNewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/editTextConfirmNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/confirmNewPassword" />

    <TextView
        android:id="@+id/textViewConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/buttonChangePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saveChanges" />

</LinearLayout>
